[FIXED] Distance padding for collapse.

--- a/mm_web_app/styles/pages/_home.scss
+++ b/mm_web_app/styles/pages/_home.scss
@@ -328,7 +328,7 @@ the home page
     }
   }
   .card-block {
-    padding: 10px 60px;
+    padding: 10px 68px;
     @media (max-width: 767px) {
       padding: 10px 15px;
     }
